testing/buildKongIngress.yaml
kind: Service
apiVersion: v1
metadata:
  name: proxy-to-httpbin
spec:
  ports:
    - protocol: TCP
      port: 80
  type: ExternalName
  externalName: httpbin.org
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-from-k8s-to-httpbin
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /foo
            pathType: ImplementationSpecific
            backend:
              service:
                name: proxy-to-httpbin
                port:
                  number: 80
